# research-assistant

./: .gitignore  README.md
client/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  config.ts  index.css  main.tsx  types.ts
client/src/components/: AgentDashboard.tsx  DelegationChain.tsx  EventLog.tsx  EventLogEntry.tsx  Header.tsx  ResearchCard.tsx  ResearchPanel.tsx  SummaryCard.tsx  TaskGroupCard.tsx  WorkerCard.tsx
client/src/context/: ResearchContext.tsx
client/src/hooks/: useElapsedTime.ts  useResearchMessages.ts
client/src/lib/: format.ts
server/: .env.example  Dockerfile  bot.py  pcc-deploy.toml  pyproject.toml  research_coordinator.py  research_worker.py  speaking_state.py  voice_agent.py
